# Slack-Bot

./: .gitignore  pyproject.toml  readme.md  requirements.txt  run.py  zappa_settings.json
.github/workflows/: main.yml
app/: __init__.py  manage.py  zappa_settings.json
app/app/: settings.py  urls.py
app/app/settings/: base.py  dev.py
app/controllers/: __init__.py  slack_event.py  user.py
app/models/: __init__.py  user.py
app/service/: answer.py
app/src/: views.py
app/templates/: __init__.py
app/templates/login/: login.html
app/utils/: get_channel_id.py  get_commit_events.py  github.py  post_message.py
app/utils/slack/: channel.py  message.py  slack_event.py
app/views/: __init__.py  slack_event.py
config/: __init__.py  app.py
src/: app.py  get_channel_id.py  views.py
tests/: test_get_json.py
