[tool.poetry]
name = "commitbot"
version = "0.1.0"
description = ""
authors = ["heunyam <tpwns072@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.8"
Flask = "^2.0.1"
pytest = "^6.2.4"
Flask-RESTful = "^0.3.9"
PyGithub = "^1.55"
pytest-mock = "^3.6.1"
slacker = "^0.14.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"